# rust-example-structure-auth-svc

./: Cargo.toml  config.env  errors.yaml
src/: conf.rs  main.rs  prelude.rs  state.rs
src/cmd/: mod.rs
src/migrations/: init.sql
src/pkg/: email.rs  mod.rs
src/pkg/middlewares/: auth.rs
src/pkg/server/: mod.rs  router.rs
src/pkg/server/handlers/: mod.rs  probes.rs  user_mgmt.rs
src/pkg/users/: mod.rs  models.rs
src/pkg/users/actions/: mod.rs  profile.rs  recovery.rs  register.rs
src/pkg/users/adaptors/: profile.rs  recovery.rs  register.rs
